@@ -1,0 +1,2 @@
+snakeoil_version=trunk
+snakeoil_branch=snakeoil
